update breadcrumb markup and examples

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -26,8 +26,7 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 ```html
 <nav class="uq-breadcrumb" aria-label="breadcrumb">
-  <ol
-    class="uq-breadcrumb__list">
+  <ol class="uq-breadcrumb__list">
     <li class="uq-breadcrumb__item">
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
     </li>
