--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -31,10 +31,17 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
     </li>
     <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Level one" href="/level-one">Level one</a>
+      <a class="uq-breadcrumb__link" title="Level one" href="/level-one"
+        >Level one</a
+      >
     </li>
     <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Level two" href="/level-one/level-two">Level two</a>
+      <a
+        class="uq-breadcrumb__link"
+        title="Level two"
+        href="/level-one/level-two"
+        >Level two</a
+      >
     </li>
     <li class="uq-breadcrumb__item">
       <span aria-current="page">Current page</span>
