Updated Global Navigation

--- a/packages/storybook-html/stories/components/footer-legacy/footer.docs.mdx
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.docs.mdx
@@ -90,7 +90,7 @@ The global footer provides a consistent branding and navigational element across
               </li>
               <li class="legacy-footer__footer-menu__item">
                 <a
-                  href="https://www.uq.edu.au/rti/"
+                  href="https://governance-risk.uq.edu.au/rtip"
                   rel="external"
                   class="legacy-footer__footer-menu__link"
                   >Right to Information</a
