--- a/packages/storybook-html/stories/components/header-legacy/header.docs.mdx
+++ b/packages/storybook-html/stories/components/header-legacy/header.docs.mdx
@@ -84,7 +84,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
         <li>
           <a
             class="legacy-header__navigation-link"
-            href="https://contacts.uq.edu.au/contacts"
+            href="https://contacts.uq.edu.au/"
             >Contacts</a
           >
         </li>
