--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -16,9 +16,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Overview
 
-Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base
-
-## Default
+Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base.
 
 <Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb" />
@@ -26,59 +24,43 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 ```html
 <nav class="uq-breadcrumb" aria-label="breadcrumb">
-  <ol
-    class="uq-breadcrumb__list"
-    itemscope=""
-    itemtype="https://schema.org/BreadcrumbList"
-  >
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
+  <ol class="uq-breadcrumb__list">
+    <li class="uq-breadcrumb__item">
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
-      <meta itemprop="position" content="1" />
     </li>
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
+    <li class="uq-breadcrumb__item">
       <a
         class="uq-breadcrumb__link"
-        itemprop="item"
         title="Level one"
-        href="/level-one"
+        href="/information-and-services"
         >Level one</a
       >
-      <meta itemprop="position" content="2" />
     </li>
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
+    <li class="uq-breadcrumb__item">
       <a
         class="uq-breadcrumb__link"
-        itemprop="item"
         title="Level two"
-        href="/level-one/level-two"
+        href="/information-and-services/internet-and-wifi"
         >Level two</a
       >
-      <meta itemprop="position" content="3" />
     </li>
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
-      Current page
-      <meta itemprop="position" content="4" />
+    <li class="uq-breadcrumb__item">
+      <a
+        class="uq-breadcrumb__link"
+        title="Bachelor of Business with a Major in Management or Finance"
+        href="#"
+        >Bachelor of Business with a Major in Management or Finance</a
+      >
     </li>
+    <li class="uq-breadcrumb__item">
+      <a
+        class="uq-breadcrumb__link"
+        title="Major Leadership and Management Science"
+        href="#"
+        >Major Leadership and Management Science</a
+      >
+    </li>
+    <li class="uq-breadcrumb__item">Current page</li>
   </ol>
 </nav>
 ```
@@ -87,16 +69,11 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. _Note: only expand functionality is included, and cannot be collapsed again without a page refresh._
 
-<Canvas withSource="none" withToolbar>
-  <Story id="components-breadcrumb--breadcrumb-truncation" />
-</Canvas>
-
 ## How and when to use
 
 - The breadcrumb reflects the information architecture of a page, not a historical navigation trail.
 - The component displays on a page once a user has navigated away from the home page to provide a navigation path back to the home and parent level pages.
 - The breadcrumb lists the current page however this should not be linked.
-- Search engines have a limited understanding of content on web pages. By adding schema microdata tags to the breadcrumb component, you can help search engines and other applications better understand the content and display it in a useful and relevant way. For further information on schema, go to https://schema.org/
 
 ## Accessibility
 
