Run migration scripts

--- a/packages/storybook-html/stories/components/core/date.story.mdx
+++ b/packages/storybook-html/stories/components/core/date.story.mdx
@@ -46,8 +46,8 @@ These date formats are designed for
         <code>hh:mmAM/PM</code>
       </td>
       <td>
-        If a timestamp is within the current day, it’s generally{" "}
-        <strong>unnecessary</strong> to show either “today”, the day or date.{" "}
+        If a timestamp is within the current day, it's generally
+        <strong>unnecessary</strong> to show either “today”, the day or date.
         <br />
         Only display the time in “hh:mmAM/PM” format
       </td>
@@ -74,11 +74,11 @@ These date formats are designed for
     </tr>
     <tr>
       <td>
-        8:00AM – 12:30PM <br />6 Jan – 2 Feb
+        8:00AM - 12:30PM <br />6 Jan - 2 Feb
       </td>
       <td>
-        <code>hh:mmAM/PM – hh:mmAM/PM</code> <br />
-        <code>DD MMM – DD MMM</code>
+        <code>hh:mmAM/PM - hh:mmAM/PM</code> <br />
+        <code>DD MMM - DD MMM</code>
       </td>
       <td>
         If the date is a range of time, separate with an en-dash without a space
@@ -87,13 +87,13 @@ These date formats are designed for
     </tr>
     <tr>
       <td>
-        4 – 31 Jan 2015 <br />
-        12 Feb– 16 Dec 2015 <br />6 Dec 2013 – 2 Jan 2014
+        4 - 31 Jan 2015 <br />
+        12 Feb - 16 Dec 2015 <br />6 Dec 2013 - 2 Jan 2014
       </td>
       <td>
-        <code>DD – DD MMM YYYY</code> <br />
-        <code>DD MMM – DD MMM YYYY</code> <br />
-        <code>DD MMM YYYY – DD MMM YYYY</code>
+        <code>DD - DD MMM YYYY</code> <br />
+        <code>DD MMM - DD MMM YYYY</code> <br />
+        <code>DD MMM YYYY - DD MMM YYYY</code>
       </td>
       <td>
         If both dates in a range start and end in the current year, omit the
@@ -102,11 +102,11 @@ These date formats are designed for
     </tr>
     <tr>
       <td>
-        4 Jan – 31 Jan 2015, <br />
-        9:00 – 12:00PM
+        4 Jan - 31 Jan 2015, <br />
+        9:00 - 12:00PM
       </td>
       <td>
-        <code>DD MMM – DD MMM YYYY, hh:mm – hh:mmAM/PM</code>
+        <code>DD MMM - DD MMM YYYY, hh:mm - hh:mmAM/PM</code>
       </td>
       <td>
         If there is a time range in addition to the date range, display the date
@@ -114,9 +114,9 @@ These date formats are designed for
       </td>
     </tr>
     <tr>
-      <td>8:00 – 10:30AM</td>
+      <td>8:00 - 10:30AM</td>
       <td>
-        <code>hh:mm – hh:mmAM/PM</code>
+        <code>hh:mm - hh:mmAM/PM</code>
       </td>
       <td>
         When a range shares a common AM/PM, append only on the end of the range.
@@ -147,7 +147,7 @@ These date formats are designed for
       <td>When listing the time zone, drop the leading 0 for single digits.</td>
     </tr>
   </tbody>
-</table>{" "}
+</table>
 
 ## Using human and relative language and approximate time
 
@@ -192,18 +192,17 @@ Relative language may not always be appropriate, e.g. current date in a clock ap
         1 min ago <br />
       </td>
       <td>
-        If absolute time isn’t necessary for specificity or comparison, display
+        If absolute time isn't necessary for specificity or comparison, display
         approximate relative times. <br />
         <strong>
-          Don’t combine units (e.g. “1 hour 32 minutes ago”). Instead, round
-          down to the most recent largest unit (e.g. “1 hour ago”)
-        </strong>.<strong>
-          Don’t display relative time which exceeds more than 1 week
-        </strong>.
+          Don't combine units (e.g. “1 hour 32 minutes ago”). Instead, round
+          down to the most recent largest unit (e.g. “1 hour ago”).      
+          Don't display relative time which exceeds more than 1 week.
+        </strong>
       </td>
     </tr>
   </tbody>
-</table>{" "}
+</table>
 
 ## Be modular
 
@@ -251,7 +250,7 @@ Depending on the context, show either date or time, or both date and time.
       <td>
         <code>DD MMM hh:mmAM/PM</code>
       </td>
-      <td>When it’s an event in the distant past, omit the time.</td>
+      <td>When it's an event in the distant past, omit the time.</td>
     </tr>
     <tr>
       <td>
@@ -264,7 +263,7 @@ Depending on the context, show either date or time, or both date and time.
       </td>
       <td>
         Use HH:MM:SS to show the duration of a recording, like audio or video.
-        If hours or seconds don’t apply, then omit them. There is no need to
+        If hours or seconds don't apply, then omit them. There is no need to
         specify hour, minute, second units (ie. 1hr 1min 5sec)
       </td>
     </tr>
@@ -323,11 +322,11 @@ Depending on the context, show either date or time, or both date and time.
       <td>
         If real estate is limited (such as with timestamps, labels on graphs,
         durations, etc.) abbreviate units, using numerical versions and/or by
-        removing the “:00”:{" "}
+        removing the “:00”:
       </td>
     </tr>
   </tbody>
-</table>{" "}
+</table>
 
 ## Some examples
 
@@ -337,15 +336,15 @@ Depending on the context, show either date or time, or both date and time.
 Thur 19 Sep 2:30PM <br />
 19/9/13 1PM
 
-8:00 – 10:00AM <br />
-8:00AM – 3:30PM <br />
-25 – 27 Jul 2015 <br />
-25 Jul – 1 Aug 2015 <br />
-6 Jan – All day
+8:00 - 10:00AM <br />
+8:00AM - 3:30PM <br />
+25 - 27 Jul 2015 <br />
+25 Jul - 1 Aug 2015 <br />
+6 Jan - All day
 
 ## Relative
 
-1PM – Midnight <br />
+1PM - Midnight <br />
 Today <br />
 Yesterday <br />
 Tomorrow <br />
