--- a/packages/storybook-html/stories/components/table/table.docs.mdx
+++ b/packages/storybook-html/stories/components/table/table.docs.mdx
@@ -6,13 +6,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 <StatusBadge.Review />
 <StatusBadge.ReviewDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
 ## Overview
 
@@ -439,4 +433,4 @@ Accessibility in tables can be acheived to an extend by following the considerat
   </table>
 </div>
 
-Reference: <https://www.w3.org/WAI/tutorials/tables/>
+Reference: [Tables Tutorial](https://www.w3.org/WAI/tutorials/tables/)
