--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
@@ -89,10 +89,10 @@ list items.
 
 <div class="alert alert--warning" role="alert">
   <div class="alert__message">
-    Note:{" "}
+    Note:
     <strong>
       there's currently no reliable way to make the search field "sticky"
-    </strong>{" "}
+    </strong>
     (remain at the top even when scrolling)—with the first search result
     initially positioned relative to the search field's height—
     <strong>using CSS and HTML alone</strong>. Implement a JavaScript solution to
