--- a/packages/storybook-html/templates/component.docs.mdx
+++ b/packages/storybook-html/templates/component.docs.mdx
@@ -9,21 +9,15 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 <StatusBadge.Review />
 <StatusBadge.Deprecated />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
 ## Overview
 
-<text> or <bullet points> - Summary of component
+<text /> or <bullet points /> - Summary of component
 
 ## Default
 
-<text>
+<text />
 
 <Canvas withSource="none">
   <Story height="100px" id="components-component-name--component-name" />
@@ -35,7 +29,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Variants
 
-<text>
+<text />
 
 <Canvas withSource="none">
   <Story height="100px" id="components-component-name--component-name" />
@@ -47,7 +41,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ### Sub-variant examples
 
-<text>
+<text />
 
 <Canvas withSource="none">
   <Story height="100px" id="components-component-name--component-name" />
@@ -59,8 +53,8 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## When and how to use
 
-<text> or <bullet points> if only a few 
-<table> - if complex scenarios
+<text /> or <bullet points /> if only a few 
+`<table>` - if complex scenarios
 
 <table className="uqds-table  uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
@@ -107,19 +101,19 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Accessibility
 
-<text> - What accessibility considerations apply to this component, regardless of the variant? 
-e.g. keyboard access if it’s a menu or accordion, screen reader access if it’s a table, announcements if it’s an alert
+<text /> - What accessibility considerations apply to this component, regardless of the variant? 
+e.g. keyboard access if it's a menu or accordion, screen reader access if it's a table, announcements if it's an alert
 
 ### Key testing issues
 
-<table>
+`<table>`
 
 ### Accessibility tags
 
-<table> - Accessibility tags used, its values and its description
+`<table>` - Accessibility tags used, its values and its description
 
-<url> - i.e. WCAG component link
+`<url>` - i.e. WCAG component link
 
 ## Related
 
-<text> - components that are used in relation to this component, patterns, gallery, bibliography, etc…
+<text /> - components that are used in relation to this component, patterns, gallery, bibliography, etc…
