--- a/packages/storybook-html/stories/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/stories/components/core/browser-support.story.mdx
@@ -71,7 +71,7 @@ Refer to the following section for more detailed information on operating system
 
 ## Assessing individual site requirements
 
-If a solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from <webservices@uq.edu.au>.
+If a solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from <a href="mailto:webservices@uq.edu.au">webservices@uq.edu.au</a>.
 
 ### Modifying browser behaviour
 
@@ -216,7 +216,7 @@ Testing preference for devices released in the previous 12 months or where signi
 
 When testing elements that are repeatable it may become impractical to test every instance of usage. We recommend setting up test scenarios, bugs that are due to an extra-long name or paragraph of CMS or user-generated content.
 
-It’s important to test both typical content and extreme content values. If your app dictates a username can be up to 255 characters long, how does your app display that? Likewise, what happens when values are missing?
+It's important to test both typical content and extreme content values. If your app dictates a username can be up to 255 characters long, how does your app display that? Likewise, what happens when values are missing?
 
 ### Non Compliance
 
@@ -312,7 +312,7 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
 - Queensland Government Browser Support List (2012-2014 Audit)
 - Gov.UK Browser Support Standards
-- 31 Ways to Spend Less Time on Manual Cross–Browser
+- 31 Ways to Spend Less Time on Manual Cross-Browser
 
 ### Additional notes
 
