begin updating colour doco

--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -28,63 +28,24 @@ UQ purple should be the only accent colour on a screen. It is already incorporat
 
 The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation.
 
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        UQ Purple
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #51247a
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Reflect UQ brand in accents and emphasis
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-purple-gradient"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Purple Gradient
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple-gradient</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #51247a #962a8b
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>
-            used horizontally, <code>$uq-purple</code> left to{" "}
-            <code>$uq-light-purple</code> right
-          </li>
-          <li>gradient centre point set to 87%</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--purple-50"><span>purple-50</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-100"><span>purple-100</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-200"><span>purple-200</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-300"><span>purple-300</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-400"><span>purple-400</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-500"><span>purple-500</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-600"><span>purple-600</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-700"><span>purple-700</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-800"><span>purple-800</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-900"><span>purple-900</span></div>
+</div>
 
-### Purple gradient large example
-
-Note the centre point at 87%.
+### Purple gradient
 
 <div className="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient "></div>
+
+Note the centre point at 87%.
 
 ## Text and icons
 
