--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -29,16 +29,16 @@ UQ purple should be the only accent colour on a screen. It is already incorporat
 The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation.
 
 <div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour--purple-50"><span>purple-50</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-100"><span>purple-100</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-200"><span>purple-200</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-300"><span>purple-300</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-400"><span>purple-400</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-500"><span>purple-500</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-600"><span>purple-600</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-700"><span>purple-700</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-800"><span>purple-800</span></div>
-  <div className="uqds-colour__palette uqds-colour--purple-900"><span>purple-900</span></div>
+  <div className="uqds-colour__palette uqds-colour--purple-50"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-100"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-200"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-300"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-400"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-500"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-600"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-700"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-800"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-900"></div>
 </div>
 
 ### Purple gradient
