--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -2,52 +2,118 @@ import { Meta, Story, Preview } from "@storybook/addon-docs";
 
 <Meta title="Core/Colour/Applying colour" />
 
-# Applying colour
+## Brand colours
 
-## Principles
+### Primary
 
-The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
-
-Colour should be applied to user interfaces in only two ways:
-
-- to apply the UQ brand to the user interface
-- in functional and semantic ways such as containers for related content or red for errors.
-
-Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
-
-## Accessibility
-
-Use of colour must meet the following requirements:
-
-- [sufficient colour contrast](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum) between text and background colours
-- [colour is not used as the only visual means of conveying information](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color).
-
-## UQ Purple and purple gradient
+#### Purple
 
 UQ purple should be the only accent colour on a screen. It is already incorporated via the header and footer, typography, icons and other components. Additional use of UQ purple should be thoughtful and sparing.
 
-The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation.
-
 <div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour--purple-50"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-100"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-200"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-300"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-400"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-500"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-600"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-700"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-800"></div>
-  <div className="uqds-colour__palette uqds-colour--purple-900"></div>
+  <div className="uqds-colour__palette uqds-colour--purple-50">purple-50</div>
+  <div className="uqds-colour__palette uqds-colour--purple-100">purple-100</div>
+  <div className="uqds-colour__palette uqds-colour--purple-200">purple-200</div>
+  <div className="uqds-colour__palette uqds-colour--purple-300">purple-300</div>
+  <div className="uqds-colour__palette uqds-colour--purple-400">purple-400</div>
+  <div className="uqds-colour__palette uqds-colour--purple-500">purple-500</div>
+  <div className="uqds-colour__palette uqds-colour--purple-600">purple-600</div>
+  <div className="uqds-colour__palette uqds-colour--purple-600">purple-650</div>
+  <div className="uqds-colour__palette uqds-colour--purple-700">purple-700</div>
+  <div className="uqds-colour__palette uqds-colour--purple-800">purple-800</div>
+  <div className="uqds-colour__palette uqds-colour--purple-900">purple-900</div>
 </div>
 
-### Purple gradient
+#### Purple gradient
 
-<div className="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient "></div>
+The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation. Note the centre point at 87%.
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient">uq-purple-gradient</div>
+</div>
 
-Note the centre point at 87%.
+#### White and black
 
-## Text and icons
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--white">white</div>
+  <div className="uqds-colour__palette uqds-colour--black">black</div>
+</div>
+
+#### Grey
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--grey-50">grey-50</div>
+  <div className="uqds-colour__palette uqds-colour--grey-100">grey-100</div>
+  <div className="uqds-colour__palette uqds-colour--grey-200">grey-200</div>
+  <div className="uqds-colour__palette uqds-colour--grey-300">grey-300</div>
+  <div className="uqds-colour__palette uqds-colour--grey-400">grey-400</div>
+  <div className="uqds-colour__palette uqds-colour--grey-500">grey-500</div>
+  <div className="uqds-colour__palette uqds-colour--grey-600">grey-600</div>
+  <div className="uqds-colour__palette uqds-colour--grey-700">grey-700</div>
+  <div className="uqds-colour__palette uqds-colour--grey-800">grey-800</div>
+  <div className="uqds-colour__palette uqds-colour--grey-900">grey-900</div>
+</div>
+
+### System
+
+#### Error
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--error-50">error-50</div>
+  <div className="uqds-colour__palette uqds-colour--error-100">error-100</div>
+  <div className="uqds-colour__palette uqds-colour--error-200">error-200</div>
+  <div className="uqds-colour__palette uqds-colour--error-300">error-300</div>
+  <div className="uqds-colour__palette uqds-colour--error-400">error-400</div>
+  <div className="uqds-colour__palette uqds-colour--error-500">error-500</div>
+  <div className="uqds-colour__palette uqds-colour--error-600">error-600</div>
+  <div className="uqds-colour__palette uqds-colour--error-700">error-700</div>
+  <div className="uqds-colour__palette uqds-colour--error-800">error-800</div>
+  <div className="uqds-colour__palette uqds-colour--error-900">error-900</div>
+</div>
+
+#### Success
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
+  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
+  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
+  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
+  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
+  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
+  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
+  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
+  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
+  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
+</div>
+
+#### Warning
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--warning-50">warning-50</div>
+  <div className="uqds-colour__palette uqds-colour--warning-100">warning-100</div>
+  <div className="uqds-colour__palette uqds-colour--warning-200">warning-200</div>
+  <div className="uqds-colour__palette uqds-colour--warning-300">warning-300</div>
+  <div className="uqds-colour__palette uqds-colour--warning-400">warning-400</div>
+  <div className="uqds-colour__palette uqds-colour--warning-500">warning-500</div>
+  <div className="uqds-colour__palette uqds-colour--warning-600">warning-600</div>
+  <div className="uqds-colour__palette uqds-colour--warning-700">warning-700</div>
+  <div className="uqds-colour__palette uqds-colour--warning-800">warning-800</div>
+  <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
+</div>
+
+#### Utility
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
+</div>
 
 Icons should generally be the same colour as any adjacent text
 
@@ -528,3 +594,24 @@ These can be used on a white background or as background colours to white text, 
     </tr>
   </tbody>
 </table>
+
+
+# Applying colour
+
+## Principles
+
+The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
+
+Colour should be applied to user interfaces in only two ways:
+
+- to apply the UQ brand to the user interface
+- in functional and semantic ways such as containers for related content or red for errors.
+
+Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
+
+## Accessibility
+
+Use of colour must meet the following requirements:
+
+- [sufficient colour contrast](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum) between text and background colours
+- [colour is not used as the only visual means of conveying information](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color).
